[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Font/CrimsonText-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Start.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 1 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Rows"]
margin_top = 353.0
margin_right = 10.0
margin_bottom = 367.0
rect_min_size = Vector2( 10, 0 )

[node name="Cols" type="VBoxContainer" parent="Rows"]
margin_left = 14.0
margin_right = 322.0
margin_bottom = 720.0
theme = SubResource( 2 )

[node name="Padding3" type="Label" parent="Rows/Cols"]
margin_top = 74.0
margin_right = 308.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Title" type="Label" parent="Rows/Cols"]
margin_top = 196.0
margin_right = 308.0
margin_bottom = 265.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "TITLE_TITLE"

[node name="Padding" type="Label" parent="Rows/Cols"]
margin_top = 343.0
margin_right = 308.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Start" type="Button" parent="Rows/Cols"]
margin_top = 465.0
margin_right = 308.0
margin_bottom = 514.0
text = "TITLE_START"
flat = true
align = 0

[node name="Settings" type="Button" parent="Rows/Cols"]
margin_top = 518.0
margin_right = 308.0
margin_bottom = 567.0
text = "TITLE_SETTINGS"
flat = true
align = 0

[node name="Credits" type="Button" parent="Rows/Cols"]
margin_top = 571.0
margin_right = 308.0
margin_bottom = 620.0
text = "TITLE_CREDITS"
flat = true
align = 0

[node name="Exit" type="Button" parent="Rows/Cols"]
margin_top = 624.0
margin_right = 308.0
margin_bottom = 673.0
text = "TITLE_EXIT"
flat = true
align = 0

[node name="Padding2" type="Label" parent="Rows/Cols"]
margin_top = 677.0
margin_right = 308.0
margin_bottom = 720.0
size_flags_horizontal = 3
[connection signal="mouse_entered" from="Rows/Cols/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="Rows/Cols/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Rows/Cols/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="pressed" from="Rows/Cols/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Rows/Cols/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="Rows/Cols/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="Rows/Cols/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="Rows/Cols/Exit" to="." method="_on_Exit_pressed"]
